src/objects/KPIMGR_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>KPIMGR_Target__c</fullName>
        <label>Target</label>
        <referenceTo>KPIMGR_User_Target__c</referenceTo>
        <relationshipLabel>Actual Performance</relationshipLabel>
        <relationshipName>Actual_Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_To_Id__c</fullName>
        <label>Related To Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Actual Performance</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>